WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69133
Fix bug in getHostCallReturnValue of DFG JIT on X86
https://bugs.webkit.org/show_bug.cgi?id=69133
Summary
Fix bug in getHostCallReturnValue of DFG JIT on X86
Yuqiang Xian
Reported
2011-09-30 00:01:46 PDT
We need to insert the additional argument in the stack slot before return address instead of simply pushing it afterwards. Also getHostCallReturnValue* should be attributed as stdcall to make the stack cleaned up by the callee.
Attachments
proposed patch
(2.08 KB, patch)
2011-09-30 00:04 PDT
,
Yuqiang Xian
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yuqiang Xian
Comment 1
2011-09-30 00:04:43 PDT
Created
attachment 109260
[details]
proposed patch
WebKit Review Bot
Comment 2
2011-09-30 13:35:14 PDT
Comment on
attachment 109260
[details]
proposed patch Clearing flags on attachment: 109260 Committed
r96419
: <
http://trac.webkit.org/changeset/96419
>
WebKit Review Bot
Comment 3
2011-09-30 13:35:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug